2017-03-27  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Stuff right margin.

	* src/ftview.c (X_TOO_LONG): Rely on `horiAdvance' when available.
	(Render_All): Use `FTDemo_Draw_Slot' so that updated X_TOO_LONG works.
	(Render_Stroke, Render_Fancy): Updated.

2017-03-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Hide LCD filter from grayscale modes.

	* src/ftview.c (Process_Event, write_header): Check the LCD mode
	before adjusting or reporting the LCD filter.

2017-03-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview, ftstring, ftgrid] Remove anti-aliasing toggle.

	* src/ftcommon.h (FTDemo_Handle): Replace `antialias' field with
	`LCD_MODE_MONO' enumerator.
	* src/ftcommon.c (FTDemo_Update_Current_Flags, FTDemo_Glyph_To_Bitmap,
	FTDemo_Index_To_Bitmap): Updated.
	* src/ftgrid.c (Process_Event, event_help, event_lcd_mode_change,
	event_lcd_filter_change): Ditto.
	* src/ftstring.c (Process_Event, event_help, event_lcdmode_change):
	Ditto.
	* src/ftview.c (Process_Event, event_help, write_header): Ditto.

2017-03-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftview.c (Render_*): Improve readability.

2017-03-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Consolidate emboldening and slanting modes.

	* src/ftview.c (Render_Slanted, Render_Embolden): Merged into...
	(Render_Fancy): ... this new function.
	(event_help, Process_Event, write_header, main): Updated.
	* src/ftview.1: Updated.

2017-03-23  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftmulti.c (Process_Event, main): Use `FT_RoundFix'.

2017-03-23  Werner Lemberg  <wl@gnu.org>

	* src/ftmulti.c (Process_Event, main): Fix rounding.

2017-03-23  Werner Lemberg  <wl@gnu.org>

	[ftmulti] Show PS name.

	* src/ftmulti.c (Render_All): Adjust vertical start position.
	(Render_Text): Make arguments similar to `Render_All'.
	Adjust vertical start position.
	(Process_Event): Round non-integer axis values to two decimal
	digits.
	(main): Updated.